--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 body {
-  display: flex;
+  /*  Originally: flex */
+  display: center;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
