--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body {
   /*  Originally: flex */
-  display: center;
+  display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
