--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('https://img2.goodfon.com/wallpaper/nbig/0/70/abstract-colorful-geometry-3433.jpg');
+  background-image: url('https://images.wallpapersden.com/image/download/abstract-shapes-2021-minimalist_bG1lZm6UmZqaraWkpJRmbmdmrWZlbWY.jpg');
 }
 
 .calculator {
