--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('https://images.wallpapersden.com/image/wxl-abstract-shapes-2021-minimalist_78019.jpg');
+  background-image: url('https://i.imgur.com/GT3iaMo.jpeg');
 }
 
 .calculator {
